Adjusted menu css to prevent it from stretching across the screen

--- a/web/project1.css
+++ b/web/project1.css
@@ -24,8 +24,8 @@ ul {
 ul#navbar {
     /*float: right;*/
 	border: 2px solid #282851;
-	/*vertical-align: top;
-	display: inline-block;*/
+	/*vertical-align: top;*/
+	display: inline-block;
 }
 
 #navbar li {
